/**
 * Copyright (C) 2003-2021, e-Evolution Consultants S.A. , http://www.e-evolution.com
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * Email: victor.perez@e-evolution.com, http://www.e-evolution.com , http://github.com/e-Evolution
 * Created by victor.perez@e-evolution.com , www.e-evolution.com
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "datatype";
option java_outer_classname = "ApplicationDictionary";
option objc_class_prefix = "AD";

/**
Proto Message for Application Dictionary Definition
 */
message Account{
  int64 seconds = 1;
}

message Amount{
  string value = 1;
  int32 scale = 2;
}

message CostPrice{
  string value = 1;
  int32 scale = 2;
}

message Assignment{
  uint32 value = 1 ;
}

message Binary{
  bytes value = 1;
}

message Button{
  string value = 1;
}

message Chart {
  uint32 value = 1 ;
}

message Color {
  string value = 1 ;
}

message CostsPrices{
  string value = 1;
  int32 scale = 2;
}

message Date {
  int64 seconds = 1;
  int32 nanos = 2;
}

message DateTime{
  int64 seconds = 1;
  int32 nanos = 2;
}


message FileName{
  bytes value = 1;
}

message FilePath {
  string value = 1;
}
message FilePathOrName{
  string  value = 1;
}

message ID {
  uint32 value = 1;
}

message Image{
  bytes value = 1;
}

message Integer {
  int32 value = 1;
}

message List{
  string value = 1;
}

message Location {
  uint32 value = 1;
}

message Locator{
  uint32 value = 1;
}

message Memo{
  bytes value = 1;
}

message Number{
  string value = 1;
  int32 scale = 2;
}
  

message PrinterName{
  string value = 1;
}

message ProductAttribute{
  uint32 value = 1;
}


message Quantity{
  string value = 1;
  int32 scale = 2;
}

message RowId {
  uint32 value = 1;
}

message Search {
  uint32 value = 1;
}

message String {
  string value = 1;
}

message Table {
  uint32 value = 1;
}

message TableDirect {
  uint32 value = 1;
}

message Text{
  string value = 1 ;
}

message TextLong {
  bytes value = 1;
}

message Time {
int64 value = 1;
}

message Url {
  string value = 1;
}


message YesNo {
  bool value = 1;
}

